Add index.html and styele.css files updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <a href="#"class="my-logo">My Logo</a>
-        <div class="menu-buttom"><a href="#"><img src="images/humburger-btn.svg" alt="menu-buttom"></a></div>
+        <nav class="nav-bar">
+            <div class="menu-buttom"><a href="#"><img src="images/humburger-btn.svg" alt="menu-buttom"></a></div>
+        </nav>
     </header>
     <section>
             <h1 class="my-name">I'm Carlos <br> Glad to see you!</h1>
